[tool.poetry]
name = "gomashio"
version = "0.1.0"
description = ""
authors = ["Aris Chow <arischow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Jinja2 = "^3.1.2"
markdown-it-py = {extras = ["plugins"], version = "^2.1.0"}
python-frontmatter = "^1.0.0"
python-slugify = "^6.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src/gomashio"]

[tool.poetry.scripts]
build = "gomashio.cli:build"
