[tool.poetry]
name = "gomashio"
version = "0.1.0"
description = ""
authors = ["Aris Chow <hello@arisc.how>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
