[tool.poetry]
name = "gomashio"
version = "0.1.0"
description = ""
authors = ["Aris Chow <arischow@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Jinja2 = "^3.1.2"
markdown-it-py = {extras = ["plugins"], version = "^2.1.0"}
python-frontmatter = "^1.0.0"
python-slugify = "^6.1.2"
typing-extensions = { version = "^4.5.0", markers = "python_version <= '3.7'"}

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pywatchman = "^1.4.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
src_paths = ["src/gomashio"]

[tool.poetry.scripts]
build = "gomashio.cli:build"
